tests/fixtures/ok/ParamsTypeOk1.php
<?php

namespace ParamsTypeOk1;

class A
{
	function test(array $a)
	{
	}
}


class B extends A
{
	function test(array $a)
	{
	}
}
